--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
           </div>
 
           <div class="row">
-              <div class="col-6 col-sm-3"><img src="assets/images/placeholder-3.jpg" style="width:150px;height:150px;" ></div>
+              <div class="col-6 col-sm-3"><a href= https://connor2121.github.io/MyGiphy/> <img src="assets/images/placeholder-3.jpg" style="width:150px;height:150px;" ></a> <h3>API Interest Page</h3></div>
               <div class="col-6 col-sm-3"><img src="assets/images/placeholder-4.jpg" style="width:150px;height:150px;"></div>
             
               <!-- Force next columns to break to new line -->
