--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
               <div class="w-100"></div>
             
               <div class="col-6 col-sm-3"><a href= https://github.com/Connor2121/liri-node-app/> <img src="assets/images/placeholder-1.jpg" style="width:150px;height:150px;"></a> <h3>Lori Bot</h3></div>
-              <div class="col-6 col-sm-3"><img src="assets/images/placeholder-2.jpg" style="width:150px;height:150px;"></div>
+              <div class="col-6 col-sm-3"><a href= https://github.com/Connor2121/BAmazon/> <img src="assets/images/placeholder-2.jpg" style="width:150px;height:150px;"></a> <h3>BAmazon Store</h3></div>
 
               <div class="w-100"></div>
               
